--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@ function onDeviceReady() {
 	
 	function onFileSystemSuccess(fileSystem) {
 		young_log("init7");
-		var dirname = "test_zip_out";
+		var dirname = "/test_zip_out";
 		fileSystem.root.getDirectory(dirname, {create: true, exclusive: false}, getdir_success, fail);
 		young_log("init8");
 	}
